base/external-synelia/ingress.yaml
# base/external-synelia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synelia-https
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-gandi-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # On SUPPRIME les annotations 'service.scheme' et 'serverstransport'
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mail.truxonline.com
        - contacts.truxonline.com
        - photos.truxonline.com
        - notes.truxonline.com
        - surveillance.truxonline.com
        - synelia.truxonline.com
      secretName: synelia-tls
  rules:
    - host: mail.truxonline.com
      http: &synelia-backend
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synelia-ext
                port:
                  number: 5000 # <-- CHANGEMENT
  - host: contacts.truxonline.com
    http: *synelia-backend
  # ... (etc. pour les autres hôtes)
  - host: synelia.truxonline.com
    http: *synelia-backend
