base/external-synelia/manifests.yaml
# --- OBJET 3 : La route d'entrée ---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: synelia-routes
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mail.truxonline.com`) || Host(`contacts.truxonline.com`) || Host(`photos.truxonline.com`) || Host(`notes.truxonline.com`) || Host(`surveillance.truxonline.com`) || Host(`synelia.truxonline.com`)
      kind: Rule
      services:
        - name: synelia-https
          kind: TraefikService
  tls:
    secretName: synelia-tls
